# Medicine-Q-A-Assistant

./: README.md
tcm-rag-platform/: .env  .env.example  .gitignore  CHAIN_COMPARISON.md  DEPLOYMENT_GUIDE.md  RUNNING.md  TECHNICAL.md  docker-compose.yml  pyproject.toml  requirements.txt
tcm-rag-platform/app/: __init__.py
tcm-rag-platform/backend/app/: main.py
tcm-rag-platform/backend/app/api/: deps.py  router.py
tcm-rag-platform/backend/data/: tcm_rag.db
tcm-rag-platform/backend/scripts/: backfill_scope50_weak_metrics.py  build_index.py  generate_eval_dataset_via_api.py  generate_grounded_eval_from_books.py  prepare_scope_eval_dataset.py  rebuild_faiss_from_checkpoint.py  repair_and_resume_build.py  repair_failed_batches.py  run_full_eval.py  run_grounded_eval.py  run_local_retrieval_regression.py  sweep_local_retrieval_params.py
tcm-rag-platform/data/dictionaries/: formula_aliases.json  herb_aliases.json  symptom_synonyms.json
tcm-rag-platform/data/eval/: generation_eval.jsonl  regression_cases.jsonl  retrieval_eval.jsonl
tcm-rag-platform/data/processed/: build_index_checkpoint.json
tcm-rag-platform/deploy/: gunicorn_conf.py  nginx.conf
tcm-rag-platform/deploy/docker/: backend.Dockerfile  worker.Dockerfile
tcm-rag-platform/deploy/mysql/: init.sql
tcm-rag-platform/frontend-admin/: .gitignore  index.html  package-lock.json  package.json
tcm-rag-platform/frontend-admin/src/: App.tsx  admin-theme.css  main.tsx
tcm-rag-platform/frontend-user/: package-lock.json  package.json
tcm-rag-platform/frontend-user/src/: App.tsx  index.css
(+168 files in other folders)
