[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-rag-platform"
version = "1.0.0"
description = "中医药智能知识服务平台 — 基于 RAG 的古籍知识问答与检索系统"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "httpx==0.27.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/app/tests"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
